<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>SoulsSpeedruns</groupId>
	<artifactId>SoulsSpeedrunsSaveOrganizer</artifactId>
	<version>1.5.2</version>
	<name>SoulsSpeedruns - Save Organizer</name>
	<description>SoulsSpeedruns - Save Organizer</description>

	<dependencies>
<!--	<dependency>
		    <groupId>net.java.dev.jna</groupId>
		    <artifactId>jna</artifactId>
		    <version>5.14.0</version>
		</dependency> -->
		<dependency>
			<groupId>com.1stleg</groupId>
			<artifactId>jnativehook</artifactId>
			<version>2.0.3</version>
		</dependency>
<!--		<dependency>
		    <groupId>com.github.jiconfont</groupId>
		    <artifactId>jiconfont</artifactId>
		    <version>1.0.0</version>
		</dependency> -->
		<dependency>
			<groupId>com.github.jiconfont</groupId>
			<artifactId>jiconfont-swing</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.github.jiconfont</groupId>
			<artifactId>jiconfont-font_awesome</artifactId>
			<version>4.7.0.0</version>
		</dependency>
<!--	<dependency>
		    <groupId>com.github.pervoj</groupId>
		    <artifactId>jiconfont-font-awesome</artifactId>
		    <version>1.0.2</version>
		</dependency> -->
		<dependency>
			<groupId>com.github.jiconfont</groupId>
			<artifactId>jiconfont-elusive</artifactId>
			<version>2.0.1</version>
		</dependency>
<!--	<dependency>
			<groupId>com.github.jiconfont</groupId>
			<artifactId>jiconfont-entypo</artifactId>
			<version>2.0.1</version>
		</dependency> -->
		<dependency>
			<groupId>com.github.jiconfont</groupId>
			<artifactId>jiconfont-open_iconic</artifactId>
			<version>1.1.1.1</version>
		</dependency>
<!--	<dependency>
			<groupId>com.github.jiconfont</groupId>
			<artifactId>jiconfont-typicons</artifactId>
			<version>2.0.7.0</version>
		</dependency> -->
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20170516</version>
		</dependency>
		<dependency>
			<groupId>com.github.weisj</groupId>
			<artifactId>darklaf-core</artifactId>
			<version>3.0.2</version>
		</dependency>


	</dependencies>


	<!-- Use "mvn package" to build a runnable jar with all dependencies added -->
	<build>
		<sourceDirectory>src</sourceDirectory>
		<resources>
			<resource>
				<directory>src</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.12.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
					<archive>
						<manifest>
							<mainClass>com.soulsspeedruns.organizer.main.OrganizerWindow</mainClass>
						</manifest>
					</archive>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>com.akathist.maven.plugins.launch4j</groupId>
				<artifactId>launch4j-maven-plugin</artifactId>
				<version>2.4.1</version>
				<executions>
					<execution>
						<id>l4j-gui</id>
						<phase>package</phase>
						<goals><goal>launch4j</goal></goals>
						<configuration>
							<headerType>gui</headerType>
							<outfile>target/${project.name}.exe</outfile>
							<icon>src/com/soulsspeedruns/organizer/resources/SoulsSpeedrunsLogo64.ico</icon>
							<jar>target/soulsspeedrunssaveorganizer-${project.version}-jar-with-dependencies.jar</jar>
							<errTitle>${project.name}</errTitle>
							<classPath>
								<mainClass>com.soulsspeedruns.organizer.main.OrganizerWindow</mainClass>
							</classPath>
							<jre>
								<path>JRE path (%VAR%)</path>
								<minVersion>1.8</minVersion>
							</jre>
							<splash>
							    <file>src/com/soulsspeedruns/organizer/resources/Splash_Screen.bmp</file>
								<waitForWindow>true</waitForWindow>
							    <timeout>10</timeout>
								<timeoutErr>true</timeoutErr>
							  </splash>
							<versionInfo>
								<fileVersion>${project.version}.0</fileVersion>
								<txtFileVersion>${project.version}.0</txtFileVersion>
								<fileDescription>${project.name}</fileDescription>
								<copyright>N/A</copyright>
								<productVersion>${project.version}.0</productVersion>
								<txtProductVersion>${project.version}.0</txtProductVersion>
								<productName>${project.name}</productName>
								<internalName>${project.name}</internalName>
								<originalFilename>${project.name}.exe</originalFilename>
							</versionInfo>
						</configuration>
					</execution>
					<execution>
						<id>l4j-gui-portable</id>
						<phase>package</phase>
						<goals><goal>launch4j</goal></goals>
						<configuration>
							<headerType>gui</headerType>
							<outfile>target/${project.name} - Bundled.exe</outfile>
							<icon>src/com/soulsspeedruns/organizer/resources/SoulsSpeedrunsLogo64.ico</icon>
							<jar>target/soulsspeedrunssaveorganizer-${project.version}-jar-with-dependencies.jar</jar>
							<errTitle>${project.name}</errTitle>
							<classPath>
								<mainClass>com.soulsspeedruns.organizer.main.OrganizerWindow</mainClass>
							</classPath>
							<jre>
								<path>./jre</path>
							</jre>
							<splash>
							    <file>src/com/soulsspeedruns/organizer/resources/Splash_Screen.bmp</file>
								<waitForWindow>true</waitForWindow>
							    <timeout>10</timeout>
								<timeoutErr>true</timeoutErr>
							  </splash>
							<versionInfo>
								<fileVersion>${project.version}.0</fileVersion>
								<txtFileVersion>${project.version}.0</txtFileVersion>
								<fileDescription>${project.name}</fileDescription>
								<copyright>N/A</copyright>
								<productVersion>${project.version}.0</productVersion>
								<txtProductVersion>${project.version}.0</txtProductVersion>
								<productName>${project.name}</productName>
								<internalName>${project.name}</internalName>
								<originalFilename>${project.name}.exe</originalFilename>
							</versionInfo>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>